--- a/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/index.html
@@ -67,119 +67,121 @@
         <!-- <a class="add-object" href="../TTMPH/ThemTTMPH">Thêm lịch mượn phòng</a> -->
         <a class="add-object" href="../TTMuonPhongHoc/index.html?Usecase=TTMPH&Form=ThemTTMPH&UIDManager=123456987">Thêm lịch mượn phòng</a>
     </nav>
-    <table>
-        <thead>
-            <tr>
-                <th class="MaLMPH">Mã lịch mượn phòng</th> <!-- Mã lịch mượn phòng -->
-                <th class="GiangVien">Giảng viên</th>
-                <th class="MaLopSV">Lớp học</th>
-                <th class="MaMH">Lớp học</th>
-                <th class="PhongHoc">Phòng học</th>
-                <th class="ThoiGian_BD">Thời gian mượn</th>
-                <th class="ThoiGian_KT">Thời gian trả</th>
-                <th class="HinhThuc">Mục đích</th> <!-- Hình thức mượn phòng -->
-                <th class="TrangThai">Trạng thái</th> <!-- Trạng thái -->
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Sử dụng Usecase với trường hợp sử dụng là xem thông tin mượn phòng học với thông tin lịch mượn phòng đã chọn 
-                    điều hướng với điều kiện: 
-                        NextUsecase-table=TTMPH
-                        NextUsecasePath-table=TTMPH
-                        UIDManager
-                    điều hướng với thông tin:
-                        MaLMPH=${LichMPH.MaLMPH}
-                        MaLH=${LichMPH.MaLH}
-                        GiangVien=${LichMPH.GiangVien}
-                        MaLopSV=${LichMPH.MaLopSV}
-                        TenMH=${LichMPH.TenMH}
-                        MaPH=${LichMPH.MaPH}
-                        ThoiGian_BD=${LichMPH.ThoiGian_BD}
-                        ThoiGian_KT=${LichMPH.ThoiGian_KT}
-                        HinhThuc=${LichMPH.HinhThuc}
-                        LyDo=${LichMPH.LyDo}
-                        TrangThai=${LichMPH.TrangThai}
-                        NgMPH=${LichMPH.NgMPH}
-                        VaiTro=${LichMPH.VaiTro}
-                        QL_Duyet=${LichMPH.QL_Duyet}
-                        YeuCauHocCu=${LichMPH.YeuCauHocCu}
-                -->
-            <!-- Sử dụng Usecase với trường hợp sử dụng là lập thủ tục mượn phòng học với thông tin lịch mượn phòng đã chọn 
-                    điều hướng với điều kiện: 
-                        NextUsecase-table=MPH
-                        NextUsecasePath-table=YCMPH
-                        UIDRegular
-                    điều hướng với thông tin:
-                        MaLMPH=${LichMPH.MaLMPH}
-                        MaLH=${LichMPH.MaLH}
-                        GiangVien=${LichMPH.GiangVien}
-                        MaLopSV=${LichMPH.MaLopSV}
-                        TenMH=${LichMPH.TenMH}
-                        MaPH=${LichMPH.MaPH}
-                        ThoiGian_BD=${LichMPH.ThoiGian_BD}
-                        ThoiGian_KT=${LichMPH.ThoiGian_KT}
-                        HinhThuc=${LichMPH.HinhThuc}
-                        LyDo=${LichMPH.LyDo}
-                        TrangThai=${LichMPH.TrangThai}
-                        NgMPH=${LichMPH.NgMPH}
-                        VaiTro=${LichMPH.VaiTro}
-                        QL_Duyet=${LichMPH.QL_Duyet}
-                        YeuCauHocCu=${LichMPH.YeuCauHocCu}
-                -->
-            <!-- <c:forEach var="LichMPH" items="${LichMPH}"> -->
-                <!-- URL sử dụng trong controller -->
-                <!-- <tr onclick="location.href = '../${NextUsecase-table}/${NextUsecasePath-table}.htm?LichMPH=${LichMPH}';">
-                    <td class="MaLMPH">B${LichMPH.MaLMPH}</td>
-                    <td class="GiangVien">${LichMPH.GiangVien}</td>
-                    <td class="MaLopSV">${LichMPH.MaLopSV}</td>
-                    <td class="TenMH">${LichMPH.TenMH}</td>
-                    <td class="MaPH">${LichMPH.MaPH}</td>
-                    <td class="ThoiGian_BD">${LichMPH.ThoiGian_BD}</td>
-                    <td class="ThoiGian_KT">${LichMPH.ThoiGian_KT}</td>
-                    <td class="HinhThuc">${LichMPH.HinhThuc}</td>
-                    <td class="TrangThai">${LichMPH.TrangThai}</td>
-                </tr> -->
-            <!-- </c:forEach> -->
+    <main>
+        <table>
+            <thead>
+                <tr>
+                    <th class="MaLMPH">Mã lịch mượn phòng</th> <!-- Mã lịch mượn phòng -->
+                    <th class="GiangVien">Giảng viên</th>
+                    <th class="MaLopSV">Lớp học</th>
+                    <th class="MaMH">Lớp học</th>
+                    <th class="PhongHoc">Phòng học</th>
+                    <th class="ThoiGian_BD">Thời gian mượn</th>
+                    <th class="ThoiGian_KT">Thời gian trả</th>
+                    <th class="HinhThuc">Mục đích</th> <!-- Hình thức mượn phòng -->
+                    <th class="TrangThai">Trạng thái</th> <!-- Trạng thái -->
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Sử dụng Usecase với trường hợp sử dụng là xem thông tin mượn phòng học với thông tin lịch mượn phòng đã chọn 
+                        điều hướng với điều kiện: 
+                            NextUsecase-table=TTMPH
+                            NextUsecasePath-table=TTMPH
+                            UIDManager
+                        điều hướng với thông tin:
+                            MaLMPH=${LichMPH.MaLMPH}
+                            MaLH=${LichMPH.MaLH}
+                            GiangVien=${LichMPH.GiangVien}
+                            MaLopSV=${LichMPH.MaLopSV}
+                            TenMH=${LichMPH.TenMH}
+                            MaPH=${LichMPH.MaPH}
+                            ThoiGian_BD=${LichMPH.ThoiGian_BD}
+                            ThoiGian_KT=${LichMPH.ThoiGian_KT}
+                            HinhThuc=${LichMPH.HinhThuc}
+                            LyDo=${LichMPH.LyDo}
+                            TrangThai=${LichMPH.TrangThai}
+                            NgMPH=${LichMPH.NgMPH}
+                            VaiTro=${LichMPH.VaiTro}
+                            QL_Duyet=${LichMPH.QL_Duyet}
+                            YeuCauHocCu=${LichMPH.YeuCauHocCu}
+                    -->
+                <!-- Sử dụng Usecase với trường hợp sử dụng là lập thủ tục mượn phòng học với thông tin lịch mượn phòng đã chọn 
+                        điều hướng với điều kiện: 
+                            NextUsecase-table=MPH
+                            NextUsecasePath-table=YCMPH
+                            UIDRegular
+                        điều hướng với thông tin:
+                            MaLMPH=${LichMPH.MaLMPH}
+                            MaLH=${LichMPH.MaLH}
+                            GiangVien=${LichMPH.GiangVien}
+                            MaLopSV=${LichMPH.MaLopSV}
+                            TenMH=${LichMPH.TenMH}
+                            MaPH=${LichMPH.MaPH}
+                            ThoiGian_BD=${LichMPH.ThoiGian_BD}
+                            ThoiGian_KT=${LichMPH.ThoiGian_KT}
+                            HinhThuc=${LichMPH.HinhThuc}
+                            LyDo=${LichMPH.LyDo}
+                            TrangThai=${LichMPH.TrangThai}
+                            NgMPH=${LichMPH.NgMPH}
+                            VaiTro=${LichMPH.VaiTro}
+                            QL_Duyet=${LichMPH.QL_Duyet}
+                            YeuCauHocCu=${LichMPH.YeuCauHocCu}
+                    -->
+                <!-- <c:forEach var="LichMPH" items="${LichMPH}"> -->
+                    <!-- URL sử dụng trong controller -->
+                    <!-- <tr onclick="location.href = '../${NextUsecase-table}/${NextUsecasePath-table}.htm?LichMPH=${LichMPH}';">
+                        <td class="MaLMPH">B${LichMPH.MaLMPH}</td>
+                        <td class="GiangVien">${LichMPH.GiangVien}</td>
+                        <td class="MaLopSV">${LichMPH.MaLopSV}</td>
+                        <td class="TenMH">${LichMPH.TenMH}</td>
+                        <td class="MaPH">${LichMPH.MaPH}</td>
+                        <td class="ThoiGian_BD">${LichMPH.ThoiGian_BD}</td>
+                        <td class="ThoiGian_KT">${LichMPH.ThoiGian_KT}</td>
+                        <td class="HinhThuc">${LichMPH.HinhThuc}</td>
+                        <td class="TrangThai">${LichMPH.TrangThai}</td>
+                    </tr> -->
+                <!-- </c:forEach> -->
 
-            <!-- Mẫu dữ liệu -->
-            <!-- Test data cho lập thủ tục mượn phòng học -->
-            <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=MPH&Display=MPH&UIDRegular=123456987&MaLMPH=B100213&MaLH=L123&GiangVien=Nguy%E1%BB%85n%20%C4%90%E1%BB%A9c%20Th%E1%BB%8Bnh&MaLopSV=D22CQCN01-N&MaMH=INT1359-3&TenMH=To%C3%A1n%20r%E1%BB%9Di%20r%E1%BA%A1c%202&MaPH=2B31&ThoiGian_BD=7%3A00%2002%2F03%2F2024&ThoiGian_KT=10%3A30%2002%2F03%2F2024&HinhThuc=H%E1%BB%8Dc%20th%E1%BB%B1c%20h%C3%A0nh&LyDo=&TrangThai=Ch%C6%B0a%20m%E1%BB%B1%E1%BB%9Dn&NgMPH=&VaiTro=&QL_Duyet=&YeuCauHocCu=';">
-                <td class="MaLMPH">B100213</td>
-                <td class="GiangVien">Nguyễn Đức Thịnh</td>
-                <td class="MaLopSV">D21CQCN02-N</td>
-                <td class="TenMH">Toán rời rạc 2</td>
-                <td class="MaPH">2B31</td>
-                <td class="ThoiGian_BD">7:00 02/03/2024</td>
-                <td class="ThoiGian_KT">10:30 02/03/2024</td>
-                <td class="HinhThuc">Học thực hành</td>
-                <td class="TrangThai">Chưa mượn</td>
-            </tr>
-            <!-- Test data rỗng -->
-            <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=TTMPH&Display=XemTTMPH&UIDManager=123456987';">
-                <td class="MaLMPH">C100214</td>
-                <td class="GiangVien"></td>
-                <td class="MaLopSV"></td>
-                <td class="TenMH"></td>
-                <td class="MaPH">2A08</td>
-                <td class="ThoiGian_BD">7:00 18/03/2024</td>
-                <td class="ThoiGian_KT">10:30 18/03/2024</td>
-                <td class="HinhThuc">Khác</td>
-                <td class="TrangThai">Đã hủy</td>
-            </tr>
-            <!-- Test data cho xem thông tin lịch mượn phòng -->
-            <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=TTMPH&Display=XemTTMPH&UIDManager=123456987&MaLMPH=D100214&GiangVien=Nguy%E1%BB%85n%20Th%E1%BB%8B%20B%C3%ADch%20Nguy%C3%AAn&MaLopSV=D21CQCN01-N&TenMH=Nh%E1%BA%ADp%20m%C3%B4n%20c%C3%B4ng%20ngh%E1%BB%87%20ph%E1%BA%A7n%20m%E1%BB%81m&MaPH=2A08&ThoiGian_BD=13%3A00%2028%2F02%2F2024&ThoiGian_KT=16%3A30%2028%2F02%2F2024&HinhThuc=H%E1%BB%8Dc%20l%C3%BD%20thuy%E1%BA%BFt&LyDo=%C4%90%E1%BB%95i%20ph%C3%B2ng%20h%E1%BB%8Dc&TrangThai=%C4%90%C3%A3%20m%C6%B0%E1%BB%A3n&NgMPH=Ng%C3%B4%20Cao%20Hy&VaiTro=Tr%E1%BB%A3%20gi%E1%BA%A3ng&QL_Duyet=Th%C3%A1i%20V%C4%83n%20Anh%20Ch%C3%ADnh&YeuCauHocCu=MC%2BR%2BMT';">
-                <td class="MaLMPH">D100214</td>
-                <td class="GiangVien">Nguyễn Thị Bích Nguyên</td>
-                <td class="MaLopSV">D21CQCN01-N</td>
-                <td class="TenMH">Nhập môn công nghệ phần mềm</td>
-                <td class="MaPH">2A08</td>
-                <td class="ThoiGian_BD">13:00 28/02/2024</td>
-                <td class="ThoiGian_KT">16:30 28/02/2024</td>
-                <td class="HinhThuc">Học lý thuyết</td>
-                <td class="TrangThai">Đã mượn</td>
-            </tr>
-        </tbody>
-    </table>
+                <!-- Mẫu dữ liệu -->
+                <!-- Test data cho lập thủ tục mượn phòng học -->
+                <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=MPH&Display=MPH&UIDRegular=123456987&MaLMPH=B100213&MaLH=L123&GiangVien=Nguy%E1%BB%85n%20%C4%90%E1%BB%A9c%20Th%E1%BB%8Bnh&MaLopSV=D22CQCN01-N&MaMH=INT1359-3&TenMH=To%C3%A1n%20r%E1%BB%9Di%20r%E1%BA%A1c%202&MaPH=2B31&ThoiGian_BD=7%3A00%2002%2F03%2F2024&ThoiGian_KT=10%3A30%2002%2F03%2F2024&HinhThuc=H%E1%BB%8Dc%20th%E1%BB%B1c%20h%C3%A0nh&LyDo=&TrangThai=Ch%C6%B0a%20m%E1%BB%B1%E1%BB%9Dn&NgMPH=&VaiTro=&QL_Duyet=&YeuCauHocCu=';">
+                    <td class="MaLMPH">B100213</td>
+                    <td class="GiangVien">Nguyễn Đức Thịnh</td>
+                    <td class="MaLopSV">D21CQCN02-N</td>
+                    <td class="TenMH">Toán rời rạc 2</td>
+                    <td class="MaPH">2B31</td>
+                    <td class="ThoiGian_BD">7:00 02/03/2024</td>
+                    <td class="ThoiGian_KT">10:30 02/03/2024</td>
+                    <td class="HinhThuc">Học thực hành</td>
+                    <td class="TrangThai">Chưa mượn</td>
+                </tr>
+                <!-- Test data rỗng -->
+                <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=TTMPH&Display=XemTTMPH&UIDManager=123456987';">
+                    <td class="MaLMPH">C100214</td>
+                    <td class="GiangVien"></td>
+                    <td class="MaLopSV"></td>
+                    <td class="TenMH"></td>
+                    <td class="MaPH">2A08</td>
+                    <td class="ThoiGian_BD">7:00 18/03/2024</td>
+                    <td class="ThoiGian_KT">10:30 18/03/2024</td>
+                    <td class="HinhThuc">Khác</td>
+                    <td class="TrangThai">Đã hủy</td>
+                </tr>
+                <!-- Test data cho xem thông tin lịch mượn phòng -->
+                <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=TTMPH&Display=XemTTMPH&UIDManager=123456987&MaLMPH=D100214&GiangVien=Nguy%E1%BB%85n%20Th%E1%BB%8B%20B%C3%ADch%20Nguy%C3%AAn&MaLopSV=D21CQCN01-N&TenMH=Nh%E1%BA%ADp%20m%C3%B4n%20c%C3%B4ng%20ngh%E1%BB%87%20ph%E1%BA%A7n%20m%E1%BB%81m&MaPH=2A08&ThoiGian_BD=13%3A00%2028%2F02%2F2024&ThoiGian_KT=16%3A30%2028%2F02%2F2024&HinhThuc=H%E1%BB%8Dc%20l%C3%BD%20thuy%E1%BA%BFt&LyDo=%C4%90%E1%BB%95i%20ph%C3%B2ng%20h%E1%BB%8Dc&TrangThai=%C4%90%C3%A3%20m%C6%B0%E1%BB%A3n&NgMPH=Ng%C3%B4%20Cao%20Hy&VaiTro=Tr%E1%BB%A3%20gi%E1%BA%A3ng&QL_Duyet=Th%C3%A1i%20V%C4%83n%20Anh%20Ch%C3%ADnh&YeuCauHocCu=MC%2BR%2BMT';">
+                    <td class="MaLMPH">D100214</td>
+                    <td class="GiangVien">Nguyễn Thị Bích Nguyên</td>
+                    <td class="MaLopSV">D21CQCN01-N</td>
+                    <td class="TenMH">Nhập môn công nghệ phần mềm</td>
+                    <td class="MaPH">2A08</td>
+                    <td class="ThoiGian_BD">13:00 28/02/2024</td>
+                    <td class="ThoiGian_KT">16:30 28/02/2024</td>
+                    <td class="HinhThuc">Học lý thuyết</td>
+                    <td class="TrangThai">Đã mượn</td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
     <button id="openGuide" onclick="window.dialog.showModal()">Hướng dẫn</button>
     <dialog id="dialog">
         <form method="dialog">
