--- a/ProjectQuảnLýMượnPhòngHọc/HomeManager/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/HomeManager/index.html
@@ -73,7 +73,7 @@
                 <!-- URL sử dụng trong controller -->
                 <!-- <a class="" href="../MPH/ChonLMPH" target="board-content"></a> -->
                 <a class="" href="../DsMuonPhongHoc/index.html?Usecase=MPH&Display=ChonLMPH&UIDRegular=${UIDRegular}" target="board-content">
-                    <span>Mượn phòng học</span>
+                    Mượn phòng học
                 </a>
             </li>
             <li class="menu-regular">
@@ -87,14 +87,14 @@
                 <!-- URL sử dụng trong controller -->
                 <!-- <a class="" href="none" target="board-content"></a> -->
                 <a class="" href="#" target="board-content">
-                    <span>Quản lý tài khoản</span>
+                    Quản lý tài khoản
                 </a>
             </li>
             <li class="menu-admin">
                 <!-- URL sử dụng trong controller -->
                 <!-- <a class="" href="none" target="board-content"></a> -->
                 <a class="" href="#" target="board-content">
-                    <span>Lịch sử hoạt động</span>
+                    Lịch sử hoạt động
                 </a>
             </li>
         </menu>
@@ -119,7 +119,7 @@
         </p>
         <p>
             <span>UID: ${UIDManager}</span>
-            <span><b>Mã xác nhận: ${Token}</b></span>
+            <b><span>Mã xác nhận: ${Token}</span></b>
         </p>
     </footer>
 </body>
