--- a/ProjectQuảnLýMượnPhòngHọc/TTLopHoc/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/TTLopHoc/index.html
@@ -1,20 +1,26 @@
 <!-- 
-    Controller:
-        Điều hướng nhận điều kiện:
-            Usecase         -   Usecase sử dụng
-            UsecasePath     -   UsecasePath sử dụng
-            UIDManager      -   UsecaseID quản lý
-            UIDRegular      -   UsecaseID người mượn phòng
-        Điều hướng nhận thông tin:
-            MaLH        -   Mã lớp học
-            IdGV        -   Id giảng viên
-            GiangVien   -   Họ tên giảng viên
-            MaLopSV     -   Mã lớp giảng dạy
-            MaMH        -   Mã môn học
-            TenMH       -   Tên môn học
-            Ngay_BD     -   Kỳ học bắt đầu
-            Ngay_KT     -   Kỳ học kết thúc
-    Chuẩn View URL truy cập:   ../${Usecase}/${UsecasePath}.htm?LopHoc=${LopHoc}
+    Dữ liệu tiếp nhận:
+        URL:
+            Paths:
+                Usecase         -   Usecase sử dụng
+                UsecasePath     -   UsecasePath sử dụng
+            Params:
+                MaLopHoc        -   Mã lớp học
+        Controller:
+            NextUsecase-Table       -   Usecase chuyển tiếp trong table
+            NextUsecasePath-Table   -   UsecasePath chuyển tiếp trong table
+            TTLopHoc:
+                MaLH        -   Mã lớp học
+                GiangVien   -   Họ tên giảng viên
+                MaLopSV     -   Mã lớp giảng dạy
+                MaMH        -   Mã môn học
+                TenMH       -   Tên môn học
+                Ngay_BD     -   Kỳ học bắt đầu
+                Ngay_KT     -   Kỳ học kết thúc
+        SessionStorage:
+            UIDManager
+            UIDRegular
+Chuẩn View URL truy cập:   ../${Usecase}/${UsecasePath}.htm?LopHoc=${LopHoc}
 -->
 <!DOCTYPE html>
 <html lang="en">
