new:     service folder update:     DsNgMuonPhongHoc views fix:     connect files MVC     name in bean, model and controller     guide-dialog

--- a/ProjectQuảnLýMượnPhòngHọc/DsLopHoc/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/DsLopHoc/index.html
@@ -11,13 +11,13 @@
             NextUsecase-Table       -   Usecase chuyển tiếp trong table
             NextUsecasePath-Table   -   UsecasePath chuyển tiếp trong table
             <TTLopHoc>:
-                MaLH        -   Mã lớp học
-                GiangVien   -   Họ tên giảng viên
-                MaLopSV     -   Mã lớp giảng dạy
-                MaMH        -   Mã môn học
-                TenMH       -   Tên môn học
-                Ngay_BD     -   Kỳ học bắt đầu
-                Ngay_KT     -   Kỳ học kết thúc
+                maLH        -   Mã lớp học
+                giangVien   -   Họ tên giảng viên
+                maLopSV     -   Mã lớp giảng dạy
+                maMH        -   Mã môn học
+                tenMH       -   Tên môn học
+                ngay_BD     -   Kỳ học bắt đầu
+                ngay_KT     -   Kỳ học kết thúc
         SessionStorage:
             UIDManager
             UIDRegular
