--- a/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/index.html
@@ -11,23 +11,23 @@
             NextUsecase-Table       -   Usecase chuyển tiếp trong table
             NextUsecasePath-Table   -   UsecasePath chuyển tiếp trong table
             <TTLichMPH>:
-                MaLMPH          -   Mã lịch mượn phòng
-                MaLH            -   Mã lớp học
-                GiangVien       -   Họ tên giảng viên
-                MaLopSV         -   Mã lớp giảng dạy
-                MaMH            -   Mã môn học
-                TenMH           -   Tên môn học
-                MaPH            -   Mã phòng học    
-                ThoiGian_BD     -   Thời gian mượn
-                ThoiGian_KT     -   Thời gian trả
-                HinhThuc        -   Hình thức
-                Lydo            -   Lý do tạo lịch mượn phòng học
-                TrangThai       -   Trạng thái mượn phòng học
-                NgMPH           -   Người mượn phòng học
-                VaiTro          -   Vai trò người mượn phòng
-                QL_Duyet        -   Quản lý duyệt
-                ThoiGian_MPH    -   Thời gian mượn phòng học
-                YeuCauHocCu     -   Yêu cầu học cụ
+                maLMPH          -   Mã lịch mượn phòng
+                maLH            -   Mã lớp học
+                giangVien       -   Họ tên giảng viên
+                maLopSV         -   Mã lớp giảng dạy
+                maMH            -   Mã môn học
+                tenMH           -   Tên môn học
+                maPH            -   Mã phòng học    
+                thoiGian_BD     -   Thời gian mượn
+                thoiGian_KT     -   Thời gian trả
+                hinhThuc        -   Hình thức
+                lydo            -   Lý do tạo lịch mượn phòng học
+                trangThai       -   Trạng thái mượn phòng học
+                ngMPH           -   Người mượn phòng học
+                vaiTro          -   Vai trò người mượn phòng
+                qL_Duyet        -   Quản lý duyệt
+                thoiGian_MPH    -   Thời gian mượn phòng học
+                yeuCauHocCu     -   Yêu cầu học cụ
         SessionStorage:
             UIDManager
             UIDRegular
